syntax = "proto3";
package DomainServices.CaseService;
option csharp_namespace = "DomainServices.CaseService.Contracts";

import "google/protobuf/any.proto";

message SalesArrangementIdRequest {
	int32 SalesArrangementId = 1;
}
message SalesArrangementListModel {
	int32 SalesArrangementId = 1;
	int64 CaseId = 2;
	int32 SalesArrangementType = 3;
	int64 ProductInstanceId = 4;
	int32 Status = 5;
	int32 OfferInstanceId = 6;
}

message CreateSalesArrangementRequest {
	int64 CaseId = 1;
	int32 SalesArrangementType = 2;
	int64 ProductInstanceId = 3;
}
message CreateSalesArrangementResponse {
	int32 SalesArrangementId = 1;
}

message GetSalesArrangementDetailResponse {
	int32 SalesArrangementId = 1;
	int64 CaseId = 2;
	int32 SalesArrangementType = 3;
	int64 ProductInstanceId = 4;
	int32 Status = 5;
	int32 OfferInstanceId = 6;
	google.protobuf.Any SalesArrangement = 7;
}

message GetSalesArrangementsByCaseIdRequest {
	int64 CaseId = 1;
	repeated int32 States = 2;
}
message GetSalesArrangementsByCaseIdResponse {
	repeated SalesArrangementListModel SalesArrangements = 1;
}

message UpdateSalesArrangementStateRequest {
	int32 SalesArrangementId = 1;
	int32 State = 2;
}

message ValidationErrorMessage {
	string Field = 1;
	string Message = 2;
}
message ValidateSalesArrangementResponse {
	bool IsValid = 1;
	repeated ValidationErrorMessage Errors = 2;
}

message UpdateSalesArrangementDataRequest {
	int32 SalesArrangementId = 1;
	google.protobuf.Any SalesArrangement = 7;
}